<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/firstField"
            android:layout_width="match_parent"
            android:layout_height="?attr/minTouchTargetSize"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/first_field_default_text"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/secondField"
            android:layout_width="match_parent"
            android:layout_height="?attr/minTouchTargetSize"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/second_field_default_text"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/compareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compare_button_text" />

        <TextView
            android:id="@+id/compareResultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>